k8s/fossflow/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fossflow
  namespace: fossflow
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: fossflow
  template:
    metadata:
      labels:
        app: fossflow
    spec:
      containers:
        - name: fossflow
          image: stnsmith/fossflow:master-b69fc2e
          ports:
            - containerPort: 80
          volumeMounts:
            - name: fossflow-storage
              mountPath: /data/diagrams
      volumes:
        - name: fossflow-storage
          persistentVolumeClaim:
            claimName: fossflow-data
