k8s/fossflow/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fossflow
  namespace: fossflow
spec:
  selector:
    app: fossflow
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
